<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".employeeDetails.EmployeeDetailsScreen">

    <include
        layout="@layout/app_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_profile_pic_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkTextColor"
                    android:text="@string/text_id"/>

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/DarkTextColor"
                    android:layout_marginStart="@dimen/size_8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkTextColor"
                    android:text="@string/text_name"/>

                <TextView
                    android:id="@+id/tv_employee_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/DarkTextColor"
                    android:layout_marginStart="@dimen/size_8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkTextColor"
                    android:text="@string/text_employee_code"/>

                <TextView
                    android:id="@+id/tv_employee_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/DarkTextColor"
                    android:layout_marginStart="@dimen/size_8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkTextColor"
                    android:text="@string/text_team"/>

                <TextView
                    android:id="@+id/tv_team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/DarkTextColor"
                    android:layout_marginStart="@dimen/size_8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkTextColor"
                    android:text="@string/text_team_id"/>

                <TextView
                    android:id="@+id/tv_team_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/DarkTextColor"
                    android:layout_marginStart="@dimen/size_8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkTextColor"
                    android:text="@string/text_address"/>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/DarkTextColor"
                    android:layout_marginStart="@dimen/size_8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkTextColor"
                    android:text="@string/text_description"/>

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/DarkTextColor"
                    android:layout_marginStart="@dimen/size_8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkTextColor"
                    android:text="@string/text_contact_number"/>

                <TextView
                    android:id="@+id/tv_contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/DarkTextColor"
                    android:layout_marginStart="@dimen/size_8dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>